# sandbox-gpt-engineer

./: .gitignore  README.md  pyproject.toml
projects/my-new-project/: README.md  feedback  package-lock.json  package.json  prompt  requirements.txt  run.sh  test.db
projects/my-new-project/.gpteng/memory/: all_output.txt
projects/my-new-project/.gpteng/memory/logs/: gen_entrypoint  simple_gen  token_usage  use_feedback
projects/my-new-project/api/: database.py  main.py  models.py
projects/my-new-project/gui/: package-lock.json  package.json
projects/my-new-project/gui/src/: App.tsx
projects/my-new-project/gui/src/components/: FileViewer.tsx
